--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -9,92 +9,137 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <style>
-  body {
-    margin: 0;
-    background: #0a0f24;
-    font-family: Arial, sans-serif;
-    color: white;
+  *{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
+
+  body{
+    background:#0f172a;
+    color:white;
     text-align:center;
-    padding-top:90px;
+    padding-top:100px;
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
   }
 
-  /* NAVBAR */
-  .navbar {
-    width: 100%;
-    position: fixed;
-    top: 0;
+  /* 🌐 NAVBAR (Same as Game Page) */
+  .navbar{
+    width:100%;
     background:#020617;
-    display: flex;
-    align-items: center;
+    padding:15px 25px;
+    display:flex;
+    align-items:center;
     justify-content:space-between;
-    padding:10px 20px;
-    z-index:100;
+    position:fixed;
+    top:0;
+    z-index:99;
   }
-  .nav-left {font-size:28px;font-weight:bold;color:#00eaff;}
-  .nav-center{display:flex;gap:20px;list-style:none;}
-  .nav-center a{color:white;text-decoration:none;font-size:18px;}
-  .nav-center a:hover{color:#00eaff;}
-  .nav-right a i{font-size:24px;margin-left:10px;color:white;}
-  .nav-right a:hover i{color:#00eaff;}
 
-  /* MAIN */
-  h1 {color:#facc15;margin-top:20px;font-size:28px;}
-  p {font-size:18px;opacity:.8;}
+  .nav-left{
+    font-size:28px;
+    font-weight:bold;
+    color:#38bdf8;
+  }
 
-  .choices {
+  .nav-center{
+    list-style:none;
+    display:flex;
+    gap:25px;
+  }
+
+  .nav-center a{
+    text-decoration:none;
+    color:white;
+    font-size:20px;
+    transition:0.3s;
+  }
+
+  .nav-center a:hover,
+  .nav-center .active{
+    color:#38bdf8;
+    font-weight:600;
+  }
+
+  .nav-right a i{
+    font-size:24px;
+    margin-left:12px;
+    color:white;
+    transition:0.3s;
+  }
+
+  .nav-right a:hover i{
+    color:#38bdf8;
+  }
+
+  /* 🎮 GAME AREA */
+  h1{font-size:32px;color:#38bdf8;margin:20px 0;}
+  p{font-size:18px;opacity:.8;}
+
+  .choices{
     display:flex;
     justify-content:center;
-    gap:10px;
-    margin:20px 0;
+    gap:15px;
+    margin:25px 0;
     flex-wrap:wrap;
   }
 
-  .choices button {
-    width:110px;
-    padding:12px;
-    font-size:18px;
-    background:#222;
-    color:white;
+  .choices button{
+    padding:14px;
+    width:140px;
+    font-size:20px;
     border-radius:10px;
-    border:2px solid #333;
+    background:#1e293b;
+    border:2px solid transparent;
+    color:white;
     transition:0.3s;
+    cursor:pointer;
   }
-  .choices button:hover {background:#333;border-color:#facc15;transform:scale(1.05);}
 
-  #result {font-size:26px;margin-top:15px;font-weight:bold;color:#facc15;}
-  #computer {margin-top:10px;font-size:20px;}
-
-  /* 📱 MOBILE FIX */
-  @media(max-width:600px){
-    .navbar {flex-direction:column;gap:5px;padding:8px;}
-    .nav-center a{font-size:16px;}
-    .choices button{width:90%;font-size:20px;}
-    #result{font-size:22px;}
+  .choices button:hover{
+    transform:translateY(-6px);
+    border-color:#38bdf8;
+    background:#243347;
   }
+
+  #computer{margin-top:10px;font-size:22px;color:#38bdf8;}
+  #result{font-size:28px;margin-top:15px;font-weight:bold;color:#facc15;}
+
+  /* 📱 Mobile */
+  @media(max-width:650px){
+    .navbar{flex-direction:column;gap:8px;}
+    .nav-center a{font-size:18px;}
+    .choices button{width:90%;}
+  }
+
 </style>
 </head>
 
 <body>
 
+<!-- 🔊 Sounds -->
 <audio id="clickSound" src="pop-423717.mp3"></audio>
 <audio id="drawSound" src="light-switch-on-382714.mp3"></audio>
 <audio id="winSound" src="victory.mp3"></audio>
 
+<!-- 🌐 NAVBAR -->
 <nav class="navbar">
   <div class="nav-left">SK</div>
+
   <ul class="nav-center">
     <li><a href="index.html">Home</a></li>
-    <li><a href="games.html">Game</a></li>
+    <li><a class="active" href="games.html">Game</a></li>
     <li><a href="about.html">About</a></li>
   </ul>
+
   <div class="nav-right">
     <a href="https://instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
   </div>
-</nav><br><br><br>
+</nav>
 
+
+<!-- 🎮 GAME -->
 <h1>Rock Paper Scissors ✊✋✌️</h1>
-<p>Choose One 👇</p>
+<p>Choose one to play 👇</p>
 
 <div class="choices">
   <button onclick="playGame('rock')">✊ Rock</button>
@@ -105,36 +150,35 @@
 <h2 id="computer"></h2>
 <h1 id="result"></h1>
 
+<!-- 🎆 SCRIPT -->
 <script>
-const clickSound = document.getElementById("clickSound");
-const winSound = document.getElementById("winSound");
-const drawSound = document.getElementById("drawSound");
+const clickSound=document.getElementById("clickSound");
+const winSound=document.getElementById("winSound");
+const drawSound=document.getElementById("drawSound");
 
-function playGame(playerChoice){
-  clickSound.currentTime=0; clickSound.play();
-
+function playGame(player){
+  clickSound.play();
   const choices=["rock","paper","scissors"];
   const comp=choices[Math.floor(Math.random()*3)];
 
-  document.getElementById("computer").innerText=`Computer chose: ${comp.toUpperCase()}`;
+  document.getElementById("computer").innerText="Computer chose: "+comp.toUpperCase();
 
-  if(playerChoice===comp){
+  if(player===comp){
     drawSound.play();
-    document.getElementById("result").innerText="🤝 DRAW";
-    return;
+    return document.getElementById("result").innerText="🤝 DRAW";
   }
 
   const win =
-    (playerChoice==="rock"&&comp==="scissors")||
-    (playerChoice==="paper"&&comp==="rock")||
-    (playerChoice==="scissors"&&comp==="paper");
+    (player==="rock" && comp==="scissors") ||
+    (player==="paper" && comp==="rock") ||
+    (player==="scissors" && comp==="paper");
 
   if(win){
-    winSound.currentTime=0;winSound.play();
+    winSound.play();
     document.getElementById("result").innerText="🎉 YOU WIN!";
     celebrate();
   } else {
-    document.getElementById("result").innerText="😞 YOU LOSE";
+    document.getElementById("result").innerText="😞 YOU LOSE!";
   }
 }
 
