--- a/snake.html
+++ b/snake.html
@@ -2,170 +2,136 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snake Game | SK</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Snake Game | SK</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<style>
+  body {
+    margin: 0;
+    font-family: Arial;
+    background: #0f172a;
+    color: #fff;
+    text-align:center;
+  }
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial;
-            background: #0f172a;
-            color: #fff;
-        }
+  /* NAVBAR (same style like other pages) */
+  .navbar{
+      width:97%;background:#020617;display:flex;
+      align-items:center;justify-content:space-between;
+      padding:10px 20px;position:sticky;top:0;z-index:10;
+  }
+  .brand{font-size:28px;font-weight:bold;color:#38bdf8;}
+  .nav-links{display:flex;gap:25px;}
+  .nav-links a{color:#fff;text-decoration:none;font-size:18px;}
+  .nav-links a:hover{color:#38bdf8;}
+  .social a{color:white;margin-left:12px;font-size:22px;}
+  .social a:hover{color:#38bdf8;}
 
-        /* NAVBAR */
-        .navbar {
-            width: 97%;
-            height: 70px;
-            background: #020617;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 30px;
-            position: sticky;
-            top: 0;
-        }
+  h1{color:#38bdf8;margin:18px 0;}
+  #score{font-size:22px;margin-bottom:10px;}
 
-        .brand {
-            font-size: 30px;
-            font-weight: bold;
-            color: #38bdf8;
-        }
+  #gameCanvas {
+    background:#0a1528;
+    border:3px solid #38bdf8;
+    border-radius:10px;
+  }
 
-        .nav-links a {
-            text-decoration: none;
-            margin: 0 20px;
-            font-size: 25px;
-            color: white;
-            transition: .3s;
-        }
+  /* POPUP */
+  .popup{
+    position:fixed;top:0;left:0;width:100%;height:100%;
+    background:rgba(0,0,0,0.75);display:flex;
+    justify-content:center;align-items:center;
+    visibility:hidden;opacity:0;transition:.3s;
+  }
+  .show{visibility:visible;opacity:1;}
+  .box{
+    background:#0f172a;border:2px solid #38bdf8;
+    padding:25px;border-radius:12px;
+    box-shadow:0 0 18px #38bdf8;text-align:center;
+  }
+  .box button{
+    background:#38bdf8;border:none;border-radius:10px;
+    padding:10px 22px;font-size:18px;color:#020617;
+    margin-top:10px;font-weight:bold;cursor:pointer;
+  }
+  .box button:hover{background:#0ea5e9;}
 
-        .nav-links a:hover {
-            color: #38bdf8;
-        }
+  /* MOBILE BUTTONS */
+  .controls{
+    margin:25px auto;width:200px;display:grid;
+    grid-template-columns:repeat(3,1fr);gap:10px;
+  }
+  .btn{
+    background:#111;border:2px solid #38bdf8;
+    padding:12px;border-radius:10px;
+    font-size:22px;color:#38bdf8;
+    display:flex;align-items:center;justify-content:center;
+    transition:.2s;font-weight:bold;
+  }
+  .btn:active{transform:scale(0.92);background:#0ea5e9;color:white;}
 
-        .social i {
-            color: white;
-            font-size: 30px;
-            margin-left: 15px;
-        }
-
-        .social i:hover {
-            color: #38bdf8;
-        }
-
-        /* PAGE */
-        h1 {
-            text-align: center;
-            color: #38bdf8;
-            margin-top: 30px;
-        }
-
-        #score {
-            text-align: center;
-            font-size: 22px;
-            color: #0af;
-        }
-
-        #gameCanvas {
-            display: block;
-            margin: 30px auto;
-            background: #0a1528;
-            border: 3px solid #38bdf8;
-            border-radius: 10px;
-        }
-
-        /* CENTER POPUPS */
-        .popup {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.7);
-            visibility: hidden;
-            opacity: 0;
-            transition: .3s;
-        }
-
-        .popup.show {
-            visibility: visible;
-            opacity: 1;
-        }
-
-        .box {
-            background: #0f172a;
-            padding: 25px 40px;
-            border-radius: 12px;
-            text-align: center;
-            border: 2px solid #38bdf8;
-            box-shadow: 0 0 20px #38bdf8;
-        }
-
-        .box button {
-            margin-top: 15px;
-            padding: 10px 22px;
-            background: #38bdf8;
-            border: none;
-            border-radius: 10px;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .box button:hover {
-            background: #0ea5e9;
-        }
-    </style>
+  @media(max-width:600px){
+    #gameCanvas{width:330px;height:330px;}
+  }
+</style>
 </head>
 
 <body>
-    <audio id="bgMusic" src="game-music-loop-7-145285.mp3" loop></audio>
-    <audio id="gameOverSound" src="game-over-deep-male-voice-clip-352695.mp3"></audio>
+<audio id="bgMusic" src="game-music-loop-7-145285.mp3" loop></audio>
+<audio id="gameOverSound" src="game-over-deep-male-voice-clip-352695.mp3"></audio>
 
+<!-- Start -->
+<div id="startPopup" class="popup show">
+  <div class="box">
+    <h2>🚀 Ready to Play?</h2>
+    <button onclick="startGame()">Start Game</button>
+  </div>
+</div>
 
-    <!-- START POPUP -->
-    <div id="startPopup" class="popup show">
-        <div class="box">
-            <h2>🚀 Ready to Play?</h2>
-            <button onclick="startGame()">Start Game</button>
-        </div>
-    </div>
+<!-- Game Over -->
+<div id="gameOverPopup" class="popup">
+  <div class="box">
+    <h2>💀 Game Over!</h2>
+    <p>Your Score: <span id="finalScore">0</span></p>
+    <button onclick="restartGame()">Restart</button>
+  </div>
+</div>
 
-    <!-- GAME OVER POPUP -->
-    <div id="gameOverPopup" class="popup">
-        <div class="box">
-            <h2>💀 Game Over!</h2>
-            <p>Your Score: <span id="finalScore">0</span></p>
-            <button onclick="restartGame()">Restart</button>
-        </div>
-    </div>
+<!-- NAV -->
+<nav class="navbar">
+  <div class="brand">SK</div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+    <a class="active" href="games.html">Game</a>
+    <a href="about.html">About</a>
+  </div>
+  <div class="social">
+    <a href="https://instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
+  </div>
+</nav>
 
-    <!-- NAVBAR -->
-    <nav class="navbar">
-        <div class="brand">SK</div>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="games.html">Game</a>
-            <a href="about.html">About</a>
-        </div>
-        <div class="social">
-            <a href="https://www.instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
-        </div>
-    </nav>
+<h1>Snake Game 🐍</h1>
+<h2 id="score">Score: 0</h2>
+<canvas id="gameCanvas" width="400" height="400"></canvas>
 
-    <h1>Snake Game 🐍</h1>
-    <h2 id="score">Score: 0</h2>
+<!-- CONTROL BUTTONS -->
+<div class="controls">
+  <div></div>
+  <div class="btn" onclick="move('UP')">⬆</div>
+  <div></div>
 
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <script src="snake.js"></script>
+  <div class="btn" onclick="move('LEFT')">⬅</div>
+  <div></div>
+  <div class="btn" onclick="move('RIGHT')">➡</div>
+
+  <div></div>
+  <div class="btn" onclick="move('DOWN')">⬇</div>
+  <div></div>
+</div>
+
+<script src="snake.js"></script>
 </body>
-
 </html>
