--- a/snake.html
+++ b/snake.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,101 +7,83 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-  body {
-    margin: 0;
-    font-family: Arial;
-    background: #0f172a;
-    color: #fff;
-    text-align:center;
-  }
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial}
+body{background:#0f172a;color:white;text-align:center}
 
-  /* NAVBAR (same style like other pages) */
-  .navbar{
-      width:97%;background:#020617;display:flex;
-      align-items:center;justify-content:space-between;
-      padding:10px 20px;position:sticky;top:0;z-index:10;
-  }
-  .brand{font-size:28px;font-weight:bold;color:#38bdf8;}
-  .nav-links{display:flex;gap:25px;}
-  .nav-links a{color:#fff;text-decoration:none;font-size:18px;}
-  .nav-links a:hover{color:#38bdf8;}
-  .social a{color:white;margin-left:12px;font-size:22px;}
-  .social a:hover{color:#38bdf8;}
+/* NAV */
+nav{
+  background:#020617;display:flex;justify-content:space-between;
+  align-items:center;padding:12px 20px;position:sticky;top:0;z-index:100;
+}
+.logo{font-size:28px;font-weight:bold;color:#38bdf8}
+nav a{text-decoration:none;color:white;margin:0 10px;font-size:18px}
+nav a:hover,nav .active{color:#38bdf8;font-weight:600}
+.social i{font-size:22px;margin-left:10px}
 
-  h1{color:#38bdf8;margin:18px 0;}
-  #score{font-size:22px;margin-bottom:10px;}
+/* TITLE */
+h1{margin-top:20px;font-size:28px;color:#38bdf8}
+#score{font-size:20px;margin:10px 0;color:#38bdf8}
 
-  #gameCanvas {
-    background:#0a1528;
-    border:3px solid #38bdf8;
-    border-radius:10px;
-  }
+/* CANVAS */
+#gameCanvas{
+  background:#0a1528;border:3px solid #38bdf8;border-radius:10px;
+  display:block;margin:10px auto;
+}
 
-  /* POPUP */
-  .popup{
-    position:fixed;top:0;left:0;width:100%;height:100%;
-    background:rgba(0,0,0,0.75);display:flex;
-    justify-content:center;align-items:center;
-    visibility:hidden;opacity:0;transition:.3s;
-  }
-  .show{visibility:visible;opacity:1;}
-  .box{
-    background:#0f172a;border:2px solid #38bdf8;
-    padding:25px;border-radius:12px;
-    box-shadow:0 0 18px #38bdf8;text-align:center;
-  }
-  .box button{
-    background:#38bdf8;border:none;border-radius:10px;
-    padding:10px 22px;font-size:18px;color:#020617;
-    margin-top:10px;font-weight:bold;cursor:pointer;
-  }
-  .box button:hover{background:#0ea5e9;}
+/* MOBILE CONTROLS */
+.controls{
+  margin-top:15px;display:flex;justify-content:center;flex-wrap:wrap;gap:10px;
+}
+.btn{
+  width:60px;height:60px;font-size:26px;background:#1e293b;border:2px solid #38bdf8;
+  border-radius:12px;color:white;cursor:pointer;transition:.2s;
+}
+.btn:active{background:#38bdf8;color:#0f172a;transform:scale(.9)}
+#up{display:block;margin:auto}
 
-  /* MOBILE BUTTONS */
-  .controls{
-    margin:25px auto;width:200px;display:grid;
-    grid-template-columns:repeat(3,1fr);gap:10px;
-  }
-  .btn{
-    background:#111;border:2px solid #38bdf8;
-    padding:12px;border-radius:10px;
-    font-size:22px;color:#38bdf8;
-    display:flex;align-items:center;justify-content:center;
-    transition:.2s;font-weight:bold;
-  }
-  .btn:active{transform:scale(0.92);background:#0ea5e9;color:white;}
-
-  @media(max-width:600px){
-    #gameCanvas{width:330px;height:330px;}
-  }
+/* POPUPS */
+.popup{
+  position:fixed;top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,.7);display:flex;justify-content:center;
+  align-items:center;visibility:hidden;opacity:0;transition:.3s;
+}
+.popup.show{visibility:visible;opacity:1}
+.box{
+  background:#0f172a;border:2px solid #38bdf8;border-radius:12px;padding:20px;
+  text-align:center;width:80%;max-width:300px;box-shadow:0 0 20px #38bdf8;
+}
+.box button{
+  margin-top:10px;padding:10px 20px;border:none;border-radius:8px;
+  background:#38bdf8;font-size:18px;font-weight:bold;cursor:pointer;
+}
+.box button:hover{background:#0ea5e9}
 </style>
 </head>
-
 <body>
+
 <audio id="bgMusic" src="game-music-loop-7-145285.mp3" loop></audio>
 <audio id="gameOverSound" src="game-over-deep-male-voice-clip-352695.mp3"></audio>
 
-<!-- Start -->
+<!-- POPUP -->
 <div id="startPopup" class="popup show">
   <div class="box">
-    <h2>🚀 Ready to Play?</h2>
-    <button onclick="startGame()">Start Game</button>
+    <h2>🚀 Ready?</h2>
+    <button type="button" onclick="startGame()">Start Game</button>
   </div>
 </div>
 
-<!-- Game Over -->
 <div id="gameOverPopup" class="popup">
   <div class="box">
     <h2>💀 Game Over!</h2>
     <p>Your Score: <span id="finalScore">0</span></p>
-    <button onclick="restartGame()">Restart</button>
+    <button type="button" onclick="restartGame()">Restart</button>
   </div>
 </div>
 
-<!-- NAV -->
-<nav class="navbar">
-  <div class="brand">SK</div>
-  <div class="nav-links">
+<!-- NAV BAR -->
+<nav>
+  <div class="logo">SK</div>
+  <div>
     <a href="index.html">Home</a>
     <a class="active" href="games.html">Game</a>
     <a href="about.html">About</a>
@@ -115,23 +96,18 @@
 
 <h1>Snake Game 🐍</h1>
 <h2 id="score">Score: 0</h2>
+
 <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-<!-- CONTROL BUTTONS -->
+<!-- MOBILE BUTTONS -->
 <div class="controls">
-  <div></div>
-  <div class="btn" onclick="move('UP')">⬆</div>
-  <div></div>
-
-  <div class="btn" onclick="move('LEFT')">⬅</div>
-  <div></div>
-  <div class="btn" onclick="move('RIGHT')">➡</div>
-
-  <div></div>
-  <div class="btn" onclick="move('DOWN')">⬇</div>
-  <div></div>
+  <button class="btn" id="up" type="button">⬆️</button>
+  <button class="btn" id="left" type="button">⬅️</button>
+  <button class="btn" id="right" type="button">➡️</button>
+  <button class="btn" id="down" type="button">⬇️</button>
 </div>
 
 <script src="snake.js"></script>
+
 </body>
 </html>
